tinytar: no append mode for CP/M due to issues with HiTech C lib
Signed-off-by: Martin <Ho-Ro@users.noreply.github.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -8,14 +8,14 @@ all: $(CPMTOOLS) $(LINUXTOOLS)
 
 
 gunzip.com: gunzip.c
-	tnylpo cc -v -e$@ $<
+	tnylpo cc -v -n -e$@ $<
 
 gunzip: gunzip.c
 	gcc $(CFLAGS) -o $@ $<
 
 
 tar.com: tinytar.c
-	tnylpo cc -v -e$@ $<
+	tnylpo cc -v -o -n -e$@ $<
 
 tinytar: tinytar.c
 	gcc $(CFLAGS) -o $@ $<
