update tar with faster z88dk wildcard solution
Signed-off-by: Martin <Ho-Ro@users.noreply.github.com>

--- a/tools/tar_work/Makefile
+++ b/tools/tar_work/Makefile
@@ -3,12 +3,13 @@ TARGETS = tinytar tar.com
 
 all: $(TARGETS)
 
+tar.com: tinytar.c Makefile
+	zcc +cpm -v -o $@ $<
+
 tinytar: tinytar.c Makefile
 	gcc -Wall -Wextra -Wpedantic -std=c89 -o $@ $<
-
-tar.com: tinytar.c Makefile
-	zcc +cpm -v -DWILDCARD -o $@ $<
 
 .PHONY: clean
 clean:
 	rm $(TARGETS)
+
