add tool time.com; gunzip buffering updates; add zsm4.com and link.com
Signed-off-by: Martin <Ho-Ro@users.noreply.github.com>

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,5 +1,5 @@
 
-CPMTOOLS = tar.com gunzip.com HiTechC_tools/gunzip.com
+CPMTOOLS = tar.com time.com gunzip.com HiTechC_tools/gunzip.com
 
 LINUXTOOLS = tinytar gunzip
 
@@ -7,6 +7,11 @@ CFLAGS = -Wall -Wextra -Wpedantic -std=c89
 
 all: $(LINUXTOOLS) $(CPMTOOLS)
 
+time.rel: time.asm
+	cpm zsm4 =$<
+
+time.com: time.rel
+	cpm link $<
 
 tar.com: tar.c Makefile
 	zcc --opt-code-speed +cpm -o $@ $<
@@ -14,6 +19,10 @@ tar.com: tar.c Makefile
 
 gunzip.com: gunzip.c Makefile
 	zcc --opt-code-speed +cpm -DMYTZ=1 -o $@ $<
+
+
+gunzipu.com: gunzip.c Makefile
+	zcc --opt-code-speed +cpm -DMYTZ=1 -DUNBUFFERED -o $@ $<
 
 
 HiTechC_tools/gunzip.com: HiTechC_tools/gunzip.c
@@ -30,4 +39,4 @@ gunzip: gunzip.c Makefile
 .PHONY: clean
 clean:
 	make -C HiTechC_tools clean
-	-rm -f $(CPMTOOLS) $(LINUXTOOLS) *~
+	-rm -f $(CPMTOOLS) $(LINUXTOOLS) *.rel *~
