move tools into one directory and keep HTC in its own subdirectory
add config files ".tnylpo.conf" and "environ" (for HTC)

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,5 +1,7 @@
 
-CPMTOOLS = tar.com time.com gunzip.com gunzipu.com HiTechC_tools/gunzip.com
+CPMTOOLS = tar.com time.com gunzip.com
+
+TESTTOOLS = gunzipb.com gunzipu.com
 
 LINUXTOOLS = tinytar gunzip
 
@@ -17,16 +19,17 @@ tar.com: tar.c Makefile
 	zcc --opt-code-speed=all +cpm -o $@ $<
 
 
-gunzip.com: gunzip.c Makefile
+# test files to compare buffered and unbuffered fgetc() anf fputc() speed of z88dk libc
+gunzipb.com: gunzip.c Makefile
 	zcc --opt-code-speed=all +cpm -DMYTZ=1 -o $@ $<
-
 
 gunzipu.com: gunzip.c Makefile
 	zcc --opt-code-speed=all +cpm -DMYTZ=1 -DUNBUFFERED -o $@ $<
 
 
-HiTechC_tools/gunzip.com: HiTechC_tools/gunzip.c
-	make -C HiTechC_tools
+gunzip.com: gunzip.c Makefile
+	./tnylpo c:htc -dMYTZ=1 -n -e$@ $<
+
 
 tinytar: tar.c Makefile
 	gcc -Wall -Wextra -Wpedantic -std=c89 -o $@ $<
@@ -38,5 +41,4 @@ gunzip: gunzip.c Makefile
 
 .PHONY: clean
 clean:
-	make -C HiTechC_tools clean
-	-rm -f $(CPMTOOLS) $(LINUXTOOLS) *.rel *~
+	-rm -f $(CPMTOOLS) $(LINUXTOOLS) $(TESTTOOLS) *.rel *~
