readonly c compiler drive
Signed-off-by: Martin <Ho-Ro@users.noreply.github.com>

--- a/tools/.tnylpo.conf
+++ b/tools/.tnylpo.conf
@@ -4,7 +4,7 @@
 drive A = "."
 
 # C: drive where the HiTech C compiler is located (set environ accordingly)
-drive C = "HiTechC_tools"
+drive C = readonly, "HiTechC_tools"
 
 # O: used as temp drive
 drive O = "/tmp"
